examples/modules/invalid/module_not_found.axom
import math.missing

print 0
